# stdcolt

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
resources/: Doxyfile.in
src/allocators/: CMakeLists.txt
src/allocators/src/stdcolt_allocators/: allocator.cpp  allocator.h  block.h
src/allocators/src/stdcolt_allocators/allocators/: arena_allocator.h  buddy_allocator.h  fallback_allocator.h  free_list_allocator.h  infallible_allocator.h  mallocator.cpp  mallocator.h  null_allocator.h  page_allocator.cpp  page_allocator.h  pool_allocator.h  segregator_allocator.h  stack_allocator.h
src/allocators/tests/: test_allocators.cpp
src/contracts/: CMakeLists.txt
src/contracts/src/stdcolt_contracts/: contracts.cpp  contracts.h
src/contracts/tests/: test_contracts.cpp
src/coroutines/: CMakeLists.txt
src/coroutines/bind_python/: bind_executor.cpp
src/coroutines/src/stdcolt_coroutines/: atomic_coroutine_handle.h  cancellation.h  executor.cpp  executor.h  generator.h  mutex.h  scheduler.h  task.h
src/coroutines/src/stdcolt_coroutines/synchronization/: flag.h
src/coroutines/tests/: test_coroutines.cpp
src/debugging/: CMakeLists.txt
src/debugging/src/stdcolt_debugging/: debugging.cpp  debugging.h
src/extensions/runtime_type/: CMakeLists.txt  README.md
src/extensions/runtime_type/bind_python/: bind_runtime_type.cpp
src/extensions/runtime_type/src/stdcolt_runtime_type/: allocator.cpp  allocator.h  cpp_abi_thunk.h  cpp_bindings.h  perfect_hash_function.cpp  perfect_hash_function.h  runtime_type.cpp  runtime_type.h
src/extensions/runtime_type/src/stdcolt_runtime_type/cpp/: bindings.h  runtime_type.h
src/extensions/runtime_type/src/stdcolt_runtime_type/rust/: allocator.rs  perfect_hash_function.rs
src/extensions/runtime_type/tests/: test_cpp_runtime_types.cpp  test_runtime_type_types.cpp  test_runtime_types.cpp
src/macros/: CMakeLists.txt
src/macros/src/stdcolt_macros/: compiler.h  for_each.h  tuple.h
src/simd/: CMakeLists.txt  simd.cpp
src/simd/benchmarks/: benchmark_add.cpp  main.cpp
src/simd/src/stdcolt_simd/: feature_detection.cpp  feature_detection.h  simd.cpp  simd.h
src/simd/tests/: test_simd.cpp
src/tracing/: CMakeLists.txt
src/tracing/src/stdcolt_tracing/: tracing.cpp  tracing.h
src/type_erase/: CMakeLists.txt
src/type_erase/src/stdcolt_type_erase/: type_erase.h
src/type_erase/tests/: test_type_erase.cpp
src/vocabular/: CMakeLists.txt
src/vocabular/src/stdcolt_vocabular/: error.h  expected.h
src/vocabular/tests/: test_expected.cpp
